# Data_Structures

./: CMakeLists.txt  README.md
Tema2_SD/: CMakeLists.txt  README.md  main.cpp
Tema3_SD/: CMakeLists.txt  README.md  main.cpp
Tema4_SD/: CMakeLists.txt  main.cpp
Tema5_SD/: CMakeLists.txt  main.cpp
