cmake_minimum_required(VERSION 3.23)
project(Data_Structure)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Data_Structure
        Tema2_SD/cmake-build-debug/Testing/Temporary/LastTest.log
        Tema2_SD/cmake-build-debug/build.ninja
        Tema2_SD/cmake-build-debug/cmake_install.cmake
        Tema2_SD/cmake-build-debug/CMakeCache.txt
        Tema2_SD/CMakeLists.txt
        Tema2_SD/main.cpp
        Tema2_SD/README.md
        LICENSE
        README.md)
